# psycho

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  license.txt
app/: CMakeLists.txt  main.c
core/: CMakeLists.txt  bios-trace.c  bios-trace.h  bus.c  bus.h  cpu-defs.h  cpu.c  cpu.h  ctx.c  disasm.c  disasm.h  log.c  log.h  util.h
core/include/core/: bios-trace.h  bus.h  compiler.h  cpu-defs.h  cpu.h  ctx.h  disasm.h  log.h  types.h
debugger/: CMakeLists.txt  main.c
doc/: Doxyfile
include/psycho/: bus.h  cpu.h  cpu_defs.h  ctx.h  dbg_disasm.h  dbg_log.h  dbg_log_bios.h  dmac.h  gpu.h  ps_x_exe.h  types.h
src/: CMakeLists.txt  bus.c  bus.h  compiler.h  cpu.c  cpu.h  cpu_defs.h  ctx.c  dbg_disasm.c  dbg_log.c  dbg_log.h  dbg_log_bios.c  dbg_log_bios.h  dmac.c  dmac.h  gpu.c  gpu.h  ps_x_exe.h  sched.h  util.h
